--- a/_posts/2016-12-22-123.markdown
+++ b/_posts/2016-12-22-123.markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "Hello Blog"
+title:      "Test"
 subtitle:   "Yeah, I have my own blog."
 date:       2016-12-22 16:00:00
 author:     "ZingLix"
@@ -28,18 +28,7 @@ tags:
 ## 初衷
 
 现在只不过是一个计算机专业学生，想做技术博客也没有那实力，就拿这里记录下未来发展路上点点滴滴吧，但愿以后能成为一个技术博客，我也能成为一个大牛[滑稽]。
-
-## 碎碎念
-
-据说GitHub爬虫策略搞得百度不会收录这博客（好像有办法解决，再说吧），这博客大概真的就只有我自己会看吧[大笑]。
-
-再想想倒也是无所谓，这博客大概帮不到什么人吧哈哈，但如果你能看到这句话说明我们还蛮有缘分的哦~如果能真的帮到你什么的话那也是再好不过了~
-
-## 展望
-
-搭完这博客还有点可惜的是，还是有些特性自己想做的还没有实现，比如说目录什么的，可惜自己还不会搞HTML，以后再说吧，反正想怎么改就能怎么改。
-
-当然这博客，只不过是一个纪录的工具（如果我真的能坚持下来的话），前面依旧有很多路要走，有很多要学，还有很多坑要跳进跳出。什么编译原理算法导论，什么线代概率论，什么ACM大创，希望自己能有所成就吧。
+编译原理算法导论，什么线代概率论，什么ACM大创，希望自己能有所成就吧。
 
 It's time to go on.
 
