add lanqiao yuanmianji

--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -11,4 +11,6 @@ tags:
 ---
 
 # 蓝桥杯
-[入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/)
+[入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) 
+
+[入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)
