--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -14,3 +14,5 @@ tags:
 [入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) 
 
 [入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)
+
+[入门训练 序列求和](/lanqiao/rumen-XuLieQuHe/)
