--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -1,1 +1,22 @@
----layout:     posttitle:      "各类OJ题目汇总"subtitle:   ""date:       2016-12-22author:     "ZingLix"header-img: "img/post-3.jpg"catalog: truetags:    - OJ---# 蓝桥杯[入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) [入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)[入门训练 序列求和](/lanqiao/rumen-XuLieQuHe/)[基础练习 阶乘训练](/lanqiao/jichu-JieCheng/)
+---
+layout:     post
+title:      "各类OJ题目汇总"
+subtitle:   ""
+date:       2016-12-22
+author:     "ZingLix"
+header-img: "img/post-3.jpg"
+catalog: true
+tags:
+    - OJ
+---
+
+# 蓝桥杯
+[入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) 
+
+[入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)
+
+[入门训练 序列求和](/lanqiao/rumen-XuLieQuHe/)
+
+[基础练习 阶乘训练](/lanqiao/jichu-JieCheng/)
+
+
