--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -8,6 +8,7 @@ header-img: "img/post-4.jpg"
 catalog: true
 tags:
     - 数据结构
+    - 树
 ---
 
 # 基本概念-树
@@ -55,7 +56,7 @@ struct TreeNode
 
 其中定义了树节点的结构，即int型的数据和两个指针分别指向左儿子和右儿子。
 
-这里实现了二叉搜索树的清空、查找、插入和删除功能。
+这里实现了二叉搜索树的[清空](#清空)、[查找](#查找)、[插入](#插入)和[删除](#删除)功能。
 
 # 清空
 {% highlight c++ %}
