--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -12,12 +12,9 @@ tags:
 
 # 蓝桥杯
 
-[入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) 
- 
-[入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)
-
-[入门训练 序列求和](/lanqiao/rumen-XuLieQuHe/)
-
-[基础练习 阶乘训练](/lanqiao/jichu-JieCheng/)
-
+[入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) <br>
+[入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)<br>
+[入门训练 序列求和](/lanqiao/rumen-XuLieQuHe/)<br>
+[基础练习 阶乘训练](/lanqiao/jichu-JieCheng/)<br>
+[基础练习 矩阵乘法](/lanqiao/jichu-JuZhen/)<br>
 [2016真题 最大比例](/lanqiao/2016-ZuiDaBiLi/)
