--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -188,3 +188,5 @@ SearchTree Delete(int x, SearchTree T)
 
 2. 两个儿子。这种情况则比较复杂，普遍处理的方法为找到其右子树中最小的值替代要删除的节点位置的值，然后再递归删除右子树中最小的那个节点。而最小的节点通常在左下角的位置，属于第一种的简单情况，所以第二次删除相对比较容易。
 ![5.gif](https://ooo.0o0.ooo/2017/01/24/5886e48d705df.gif)
+
+> 图片和gif来自 [visualgo.net](https://visualgo.net/)
