--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -18,3 +18,6 @@ tags:
 [基础练习 阶乘训练](/lanqiao/jichu-JieCheng/)<br>
 [基础练习 矩阵乘法](/lanqiao/jichu-JuZhen/)<br>
 [2016真题 最大比例](/lanqiao/2016-ZuiDaBiLi/)
+
+# UVa
+[10943 - How do you add?](/uva/10943/)
