--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -20,4 +20,4 @@ tags:
 [2016真题 最大比例](/lanqiao/2016-ZuiDaBiLi/)
 
 # UVa
-[10943 - How do you add?](/uva/10943/)
+[10943 - How do you add?](/UVa/10943/)
