--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -56,7 +56,7 @@ struct TreeNode
 
 其中定义了树节点的结构，即int型的数据和两个指针分别指向左儿子和右儿子。
 
-这里实现了二叉搜索树的[清空](#section-3)、[查找](#section-4)、[插入](#section-6)和[删除](#section-7)功能。
+这里实现了二叉搜索树的清空、查找、插入和删除功能。
 
 # 清空
 {% highlight c++ %}
