--- a/_posts/2017-3-24-Sort.md
+++ b/_posts/2017-3-24-Sort.md
@@ -13,7 +13,7 @@ tags:
 
 # 概述
 
-排序分为内部排序和外部排序两种，本文讨论内部排序，即将数据存放于内存中进行排序的算法，分别为[冒泡排序](#section-2)、[插入排序](#section-3)、[归并排序](#section-4)和[快速排序](#section-5)。
+排序分为内部排序和外部排序两种，本文讨论内部排序，即将数据存放于内存中进行排序的算法，分别为冒泡排序、插入排序、归并排序和快速排序。
 
 # 冒泡排序
 
