--- a/_posts/2017-3-3-Sort.md
+++ b/_posts/2017-3-3-Sort.md
@@ -2,7 +2,7 @@
 layout:     post
 title:      "学习笔记：算法-排序"
 subtitle:   ""
-date:       2017-1-23
+date:       2017-3-3
 author:     "ZingLix"
 header-img: "img/post-5.jpg"
 catalog: true
@@ -143,3 +143,5 @@ void Qsort(int dat[], int left,int right) {
 {% endhighlight %}
 
 > 图片和gif来自 [visualgo.net](https://visualgo.net/)
+> 
+> 源代码均以上传至[GitHub](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Sort)
