fix font size and move pictures to the git

--- a/_UVa/10943.md
+++ b/_UVa/10943.md
@@ -10,7 +10,7 @@ tags:
     - UVa
 ---
 
-# Description
+## Description
 
 　　Larry is very bad at math — he usually uses a calculator, which
 worked well throughout college. Unforunately, he is now struck in
@@ -35,12 +35,12 @@ can K numbers less than N add up to N?<br>
 
 
 
-# Input
+## Input
 　　Each line will contain a pair of numbers N and K. N and K will both be an integer from 1 to 100,
 inclusive. The input will terminate on 2 0’s.
 
 
-# Output
+## Output
 　　Since Larry is only interested in the last few digits of the answer, for each pair of numbers N and K,
 print a single number mod 1,000,000 on a single line.
  
@@ -49,7 +49,7 @@ print a single number mod 1,000,000 on a single line.
 | 20 2<br>20 2<br>0 0   | 21<br>21 | 
 
 
-# Solution
+## Solution
 
 这题利用循环，思路简单来说就是先建立拆成两个数相加的结果，然后拆成三个数相加时可以枚举第一个数，然后后两个数可以利用之前得到结果循环求和，依此类推，得到一个在数据范围内有完整结果的数组，之后直接取即可。
 
