--- a/_posts/2016-12-22-OJ.md
+++ b/_posts/2016-12-22-OJ.md
@@ -10,7 +10,7 @@ tags:
     - OJ
 ---
 
-# 蓝桥杯
+## 蓝桥杯
 
 [入门训练 Fibonacci数列](/lanqiao/rumen-Fibonacci/) <br>
 [入门训练 圆的面积](/lanqiao/rumen-YuanMianJi/)<br>
@@ -19,5 +19,5 @@ tags:
 [基础练习 矩阵乘法](/lanqiao/jichu-JuZhen/)<br>
 [2016真题 最大比例](/lanqiao/2016-ZuiDaBiLi/)
 
-# UVa
+## UVa
 [10943 - How do you add?](/UVa/10943/)
