--- a/_posts/2017-4-23-gitment.md
+++ b/_posts/2017-4-23-gitment.md
@@ -11,7 +11,7 @@ tags:
 ---
 
 之前评论一直用的多说，感觉十分不错，支持国内基本所有社交账户，但一切来得太突然，估计因为找不到好的变现手段，运营不下去了。
-![QQ截图20170423165349.png](https://ooo.0o0.ooo/2017/04/23/58fc6baf5ca0a.png)
+![QQ截图20170423165349.png](\img\in-post\gitment\58fc6baf5ca0a.png)
 但是没有评论系统感觉还蛮僵硬的，所以还是得找个替代手段。分别对比了Disqus，友言，畅言，网易云跟帖等等，感觉不是被墙用不了，要不就是这个评论框实在是有点难看，而且很担心哪个变成下一个多说。但最后发现了Gitment这一解决方案，而且一眼我就决定就是他了。
 
 先来说说看Gitment是什么。这一项目在Github上开源（[项目地址]([https://github.com/imsun/gitment](https://github.com/imsun/gitment))），原理是利用Github Issues为基础做的评论系统，根据作者所说有如下优点：
