--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -11,7 +11,7 @@ tags:
     - 树
 ---
 
-# 基本概念-树
+## 基本概念-树
 根据Wiki的定义，树（英语：tree）是一种抽象数据类型（ADT）或是实作这种抽象数据类型的数据结构，用来模拟具有树状结构性质的数据集合。它是由n（n>=1）个有限节点组成一个具有层次关系的集合。有以下几个特点：
 - 每个节点有零个或多个子节点；
 - 没有父节点的节点称为根节点；
@@ -19,9 +19,9 @@ tags:
 - 除了根节点外，每个子节点可以分为多个不相交的子树；
 
 下图即为一棵树，其中83即为根节点，11为8和27的父节点，27和8即为11的子节点。
-![QQ截图20170124112517.png](https://ooo.0o0.ooo/2017/01/24/5886c93377023.png)
+![QQ截图20170124112517.png](\img\in-post\Tree\5886c93377023.png)
 
-# 基本概念-二叉搜索树
+## 基本概念-二叉搜索树
 二叉搜索树（英语：Binary Search Tree）为树中一种类型，具有以下特点：
 - 若任意节点的左子树不空，则左子树上所有结点的值均小于它的根结点的值；
 - 若任意节点的右子树不空，则右子树上所有结点的值均大于它的根结点的值；
@@ -30,9 +30,9 @@ tags:
 
 下图即为一颗二叉搜索树，即任何一个节点左边都小于节点值，右边均大于节点值，且不存在重复的节点。
 
-![QQ截图20170124113515.png](https://ooo.0o0.ooo/2017/01/24/5886cb86c8b41.png)
+![QQ截图20170124113515.png](\img\in-post\Tree\5886cb86c8b41.png)
 
-# 原型声明
+## 原型声明
 {% highlight c++ %}
 struct TreeNode;
 typedef struct TreeNode *Position;
@@ -58,7 +58,7 @@ struct TreeNode
 
 这里实现了二叉搜索树的清空、查找、插入和删除功能。
 
-# 清空
+## 清空
 {% highlight c++ %}
 SearchTree MakeEmpty(SearchTree T)
 {
@@ -73,7 +73,7 @@ SearchTree MakeEmpty(SearchTree T)
 {% endhighlight %}
 即递归的清空每一个树节点释放其内存。
 
-# 查找
+## 查找
 {% highlight c++ %}
 Position Find(int x, SearchTree T)
 {
@@ -91,10 +91,10 @@ Position Find(int x, SearchTree T)
 {% endhighlight %}
 传入要查找的值和根节点，根据二叉查找树的定义，比某个节点大则去右侧找，同样若比某个节点小则去左边找，然后递归的实现。
 
-![2.gif](https://ooo.0o0.ooo/2017/01/24/5886dd099e9dc.gif)
+![2.gif](\img\in-post\Tree\5886dd099e9dc.gif)
 上图为查找69的过程。
 
-# 查找最大最小值
+## 查找最大最小值
 {% highlight c++ %}
 Position FindMin(SearchTree T)
 {
@@ -121,10 +121,10 @@ Position FindMax(SearchTree T)
 {% endhighlight %}
 根据二叉搜索树性质，最大最小值必然分别出现在右下角和左下角，不断向右到底和向左到底即可完成。其中查找最小值利用递归实现，查找最大值利用循环实现。
 
-![1.gif](https://ooo.0o0.ooo/2017/01/24/5886de22778f3.gif)
+![1.gif](\img\in-post\Tree\5886de22778f3.gif)
 
 
-# 插入
+## 插入
 {% highlight c++ %}
 SearchTree Insert(int x, SearchTree T)
 {
@@ -145,10 +145,10 @@ SearchTree Insert(int x, SearchTree T)
 {% endhighlight %}
 同样利用二叉搜索树性质，找到其所对应的父节点，然后当传入NULL的时候即代表这是所要插入的位置，返回新增节点地址，从而使得父节点可以指向新增节点，从而完成插入。
 
-![3.gif](https://ooo.0o0.ooo/2017/01/24/5886e197e2f7f.gif)
+![3.gif](\img\in-post\Tree\5886e197e2f7f.gif)
 
 
-# 删除
+## 删除
 {% highlight c++ %}
 SearchTree Delete(int x, SearchTree T)
 {
@@ -184,10 +184,10 @@ SearchTree Delete(int x, SearchTree T)
 删除相对来说比较麻烦，因为涉及到两种不同的情况，首先依旧是利用递归找到要删除的节点位置，然后
 
 1. 一个或没有儿子。这种情况相对比较简单，只需要让其父节点直接指向该节点的儿子或者NULL，然后释放该节点即可。
-![4.gif](https://ooo.0o0.ooo/2017/01/24/5886e354811b6.gif)
+![4.gif](\img\in-post\Tree\5886e354811b6.gif)
 
 2. 两个儿子。这种情况则比较复杂，普遍处理的方法为找到其右子树中最小的值替代要删除的节点位置的值，然后再递归删除右子树中最小的那个节点。而最小的节点通常在左下角的位置，属于第一种的简单情况，所以第二次删除相对比较容易。
-![5.gif](https://ooo.0o0.ooo/2017/01/24/5886e48d705df.gif)
+![5.gif](\img\in-post\Tree\5886e48d705df.gif)
 
 > 图片和gif来自 [visualgo.net](https://visualgo.net/)
 > 
