--- a/_posts/2017-3-26-Stack.md
+++ b/_posts/2017-3-26-Stack.md
@@ -11,11 +11,11 @@ tags:
     - 堆栈
 ---
 
-# 基本概念
+## 基本概念
 堆栈（stack）是一种特殊的线性数据结构，只能够在一端（即栈顶）进行，采用后进先出原则（LIFO, Last In First Out），基本操作有加入数据（push）和输出数据（pop）两种运算。
-![QQ截图20170326220642.png](https://ooo.0o0.ooo/2017/03/26/58d7cb075169b.png)
+![QQ截图20170326220642.png](\img\in-post\Stack\58d7cb075169b.png)
 
-# 原型声明
+## 原型声明
 除了构造和析构函数外，根据定义，最主要的即为Pop和Push两个操作，在此基础上加上返回栈顶元素（Top），判断是否为空栈（IsEmpty）和将栈置空（MakeEmpty）三个功能。<br>在本文中，每个栈都有一个表头，不记录数据，只用来记录栈顶位置。
 {% highlight c++ %}
 struct Node
@@ -40,7 +40,7 @@ private:
 };
 {% endhighlight %}
 
-# 压入数据 Push
+## 压入数据 Push
 整体思路为新申请一个节点，用于存储新数据，使其指向原栈顶元素，再将表头指向新元素即可。
 {% highlight c++ %}
 void Stack::Push(int x)
@@ -52,7 +52,7 @@ void Stack::Push(int x)
 }
 {% endhighlight %}
 
-# 弹出数据 Pop
+## 弹出数据 Pop
 只需将栈顶元素删除，然后将表头指向原栈顶元素所指向的结点即可。在这要注意用一个新变量先记录栈顶元素否则会导致无法释放空间。而且要防止空栈的情况发生。
 {% highlight c++ %}
 void Stack::Pop()
@@ -65,7 +65,7 @@ void Stack::Pop()
 }
 {% endhighlight %}
 
-# 返回栈顶元素 Top
+## 返回栈顶元素 Top
 返回表头所指结点数据即可。这里INF为一个不可能被使用到的数据，以用来提示空栈的情况。
 {% highlight c++ %}
 int Stack::Top()
@@ -78,7 +78,7 @@ int Stack::Top()
 }
 {% endhighlight %}
 
-# 判断是否为空栈 IsEmpty
+## 判断是否为空栈 IsEmpty
 判断表头是否为空指针即可。
 {% highlight c++ %}
 int Stack::IsEmpty()
@@ -91,7 +91,7 @@ int Stack::IsEmpty()
 }
 {% endhighlight %}
 
-# 将栈置空 MakeEmpty
+## 将栈置空 MakeEmpty
 将元素不断弹出直至栈为空即可。
 {% highlight c++ %}
 void Stack::MakeEmpty()
