--- a/_posts/2017-3-3-Sort.md
+++ b/_posts/2017-3-3-Sort.md
@@ -11,16 +11,16 @@ tags:
     - 排序
 ---
 
-# 概述
+## 概述
 
 排序分为内部排序和外部排序两种，本文讨论内部排序，即将数据存放于内存中进行排序的算法，分别为冒泡排序、插入排序、归并排序和快速排序。
 
-# 冒泡排序
+## 冒泡排序
 
 冒泡排序应该是所以接触算法的人所第一个了解的排序算法，之所以如此正因为其易懂。
 
 整体思路就是两两比较，将较大的数据往后移动，所以每一次循环，最后一个必定是最大的，即已经完成排序，如下图所示。
-![bubble_sort.gif](https://ooo.0o0.ooo/2017/03/12/58c55b63520ba.gif)
+![bubble_sort.gif](\img\in-post\Sort\58c55b63520ba.gif)
 由于冒泡排序效率太低，实际应用不广泛，在此不多做讨论，代码如下：
 {% highlight c++ %}
 void bubble_sort(int dat[], int n) {
@@ -32,10 +32,10 @@ void bubble_sort(int dat[], int n) {
 }
 {% endhighlight %}
 
-# 插入排序
+## 插入排序
 
 插入排序其思路与打牌时理牌的思路相同，即将每个元素与之前的元素交换，直至小于前一个元素。
-![insert_sort.gif](https://ooo.0o0.ooo/2017/03/12/58c55d4b3efc7.gif)
+![insert_sort.gif](\img\in-post\Sort\58c55d4b3efc7.gif)
 由于交换次数过多，而每次调用swap函数会导致额外的时间花销，所以这里采用用tmp先记录要要排序的那个元素，然后每次交换时只将后一个元素赋值前一个元素，直到找到正确的位置，将tmp赋值给它，从而避免使用swap。代码如下：
 {% highlight c++ %}
 void insert_sort(int dat[], int n) {
@@ -50,10 +50,10 @@ void insert_sort(int dat[], int n) {
 }
 {% endhighlight %}
 
-# 归并排序
+## 归并排序
 
 归并排序思路主要为将数组分成数个小数组，然后对其排序，之后再将每两个小数组合并，从而完成对整个数组的排序。该算法是经典的利用分治思想的算法。
-![merge_sort.gif](https://ooo.0o0.ooo/2017/03/12/58c55ff95099a.gif)
+![merge_sort.gif](\img\in-post\Sort\58c55ff95099a.gif)
 所以分为以下三个部分：
 {% highlight c++ %}
 //入口函数，负责创建临时数组
@@ -69,7 +69,7 @@ void Msort(int dat[],int tmp[], int left, int right);
 void Merge(int dat[],int tmp[], int leftStart, int rightStart, int rightEnd);
 {% endhighlight %}
 其中最为重要的就在于Merge函数，思路主要是先不断比较小数组前面的元素，直到将其中一个小数组全部拷贝至tmp中。
-![QQ截图20170313133049.png](https://ooo.0o0.ooo/2017/03/13/58c62e9d959db.png)
+![QQ截图20170313133049.png](\img\in-post\Sort\58c62e9d959db.png)
 再将另一个数组剩下的元素拷贝至tmp中，最后把tmp复制到原数组中。
 
 具体代码如下：
@@ -115,9 +115,9 @@ void Merge(int dat[],int tmp[], int leftStart, int rightStart, int rightEnd) {
 }
 {% endhighlight %}
 
-# 快速排序
+## 快速排序
 快速排序主要思想为先选取枢纽元，然后将比其小的放至其左侧，比其大的放至右侧，然后再分别以递归的方式对左右两侧元素处理。
-![quick_sort.gif](https://ooo.0o0.ooo/2017/03/13/58c6307ff1b11.gif)
+![quick_sort.gif](\img\in-post\Sort\58c6307ff1b11.gif)
 图中黄色为枢纽元，绿色为比枢纽元小的部分，紫色为比其大的部分。
 
 图中采用第一个元素为枢纽元，下面代码中采用随机元素作为枢纽元，比起前一个方法较为安全，还有一个做法是使用中值进行分割，会在之后进行讨论。具体代码如下：
