--- a/_posts/2017-3-3-Sort.md
+++ b/_posts/2017-3-3-Sort.md
@@ -13,7 +13,7 @@ tags:
 
 ## 概述
 
-排序分为内部排序和外部排序两种，本文讨论内部排序，即将数据存放于内存中进行排序的算法，分别为冒泡排序、插入排序、归并排序和快速排序。
+排序分为内部排序和外部排序两种，本文讨论内部排序，即将数据存放于内存中进行排序的算法，分别为冒泡排序、插入排序、归并排序和快速排序。关于外部排序，[在这](/2017/05/08/External-Sort/)进行了讨论，本文不再赘述。
 
 ## 冒泡排序
 
@@ -141,6 +141,9 @@ void Qsort(int dat[], int left,int right) {
 }
 
 {% endhighlight %}
+
+## 总结
+在这里我们所讨论的所有算法均以比较作为基础，所以都被称为比较排序。关于非比较排序[在此](/2017/05/08/External-Sort/)进行了讨论。在所有内部排序方法中，快速排序可以说是内部排序中最好的方法，当待排数据随机时所需平均时间最短。
 
 > 图片和gif来自 [visualgo.net](https://visualgo.net/)
 > 
