--- a/_posts/2017-3-26-Stack.md
+++ b/_posts/2017-3-26-Stack.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "学习笔记：数据结构-堆栈"
+title:      "数据结构-堆栈"
 subtitle:   ""
 date:       2017-3-26
 author:     "ZingLix"
