--- a/_posts/2017-5-15-Heap.md
+++ b/_posts/2017-5-15-Heap.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "学习笔记：二叉堆及堆排序"
+title:      "二叉堆及堆排序"
 subtitle:   ""
 date:       2017-5-15
 author:     "ZingLix"
