modify code block style

--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -19,7 +19,7 @@ tags:
 - 除了根节点外，每个子节点可以分为多个不相交的子树；
 
 下图即为一棵树，其中83即为根节点，11为8和27的父节点，27和8即为11的子节点。
-![QQ截图20170124112517.png](\img\in-post\Tree\5886c93377023.png)
+![QQ截图20170124112517.png](/img/in-post/Tree/5886c93377023.png)
 
 ## 基本概念-二叉搜索树
 二叉搜索树（英语：Binary Search Tree）为树中一种类型，具有以下特点：
@@ -30,10 +30,10 @@ tags:
 
 下图即为一颗二叉搜索树，即任何一个节点左边都小于节点值，右边均大于节点值，且不存在重复的节点。
 
-![QQ截图20170124113515.png](\img\in-post\Tree\5886cb86c8b41.png)
+![QQ截图20170124113515.png](/img/in-post/Tree/5886cb86c8b41.png)
 
 ## 原型声明
-{% highlight c++ %}
+``` cpp
 struct TreeNode;
 typedef struct TreeNode *Position;
 typedef struct TreeNode *SearchTree;
@@ -45,21 +45,20 @@ Position FindMax(SearchTree T);
 SearchTree Insert(int x, SearchTree T);
 SearchTree Delete(int x, SearchTree T);
 
-
 struct TreeNode
 {
 	int data;
 	TreeNode *Left;
 	TreeNode *Right;
 };
-{% endhighlight %}
+```
 
 其中定义了树节点的结构，即int型的数据和两个指针分别指向左儿子和右儿子。
 
 这里实现了二叉搜索树的清空、查找、插入和删除功能。
 
 ## 清空
-{% highlight c++ %}
+``` cpp
 SearchTree MakeEmpty(SearchTree T)
 {
 	if (T != NULL) {
@@ -70,32 +69,32 @@ SearchTree MakeEmpty(SearchTree T)
 	}
 	return T;
 }
-{% endhighlight %}
+```
 即递归的清空每一个树节点释放其内存。
 
 ## 查找
-{% highlight c++ %}
+``` cpp
 Position Find(int x, SearchTree T)
 {
 	if (T == NULL) return NULL;
-	if (x < T->data) { 
-		return Find(x, T->Left); 
+	if (x < T->data) {
+		return Find(x, T->Left);
 	}
-	else if (x>T->data) { 
-		return Find(x, T->Right); 
+	else if (x>T->data) {
+		return Find(x, T->Right);
 	}
 	else {
 		return T;
 	}
 }
-{% endhighlight %}
+```
 传入要查找的值和根节点，根据二叉查找树的定义，比某个节点大则去右侧找，同样若比某个节点小则去左边找，然后递归的实现。
 
-![2.gif](\img\in-post\Tree\5886dd099e9dc.gif)
-上图为查找69的过程。
+![2.gif](/img/in-post/Tree/5886dd099e9dc.gif)
+上图为查找 69 的过程。
 
 ## 查找最大最小值
-{% highlight c++ %}
+``` cpp
 Position FindMin(SearchTree T)
 {
 	if (T == NULL) {
@@ -118,18 +117,18 @@ Position FindMax(SearchTree T)
 	}
 	return T;
 }
-{% endhighlight %}
+```
 根据二叉搜索树性质，最大最小值必然分别出现在右下角和左下角，不断向右到底和向左到底即可完成。其中查找最小值利用递归实现，查找最大值利用循环实现。
 
-![1.gif](\img\in-post\Tree\5886de22778f3.gif)
+![1.gif](/img/in-post/Tree/5886de22778f3.gif)
 
 
 ## 插入
-{% highlight c++ %}
+``` cpp
 SearchTree Insert(int x, SearchTree T)
 {
 	if (T == NULL) {
-		T = (TreeNode *)malloc(sizeof(TreeNode));
+		T = (TreeNode* )malloc(sizeof(TreeNode));
 		T->data = x;
 		T->Left = NULL;
 		T->Right = NULL;
@@ -142,33 +141,30 @@ SearchTree Insert(int x, SearchTree T)
 	}
 	return T;
 }
-{% endhighlight %}
+```
 同样利用二叉搜索树性质，找到其所对应的父节点，然后当传入NULL的时候即代表这是所要插入的位置，返回新增节点地址，从而使得父节点可以指向新增节点，从而完成插入。
 
-![3.gif](\img\in-post\Tree\5886e197e2f7f.gif)
+![3.gif](/img/in-post/Tree/5886e197e2f7f.gif)
 
 
 ## 删除
-{% highlight c++ %}
+``` cpp
 SearchTree Delete(int x, SearchTree T)
 {
 	Position Tmp;
 	if (x < T->data) {
 		T->Left=Delete(x, T->Left);
 	}
-	else if(x > T->data) { 
+	else if(x > T->data) {
 		T->Right=Delete(x, T->Right);
 	}//找到所要删除的节点
-	
 	else
 	if (T->Left != NULL&&T->Right!= NULL) {  //两个儿子的情况
-
 		Tmp = FindMin(T->Right);
 		T->data = Tmp->data;
 		T->Right = Delete(T->data, T->Right);
 	}
 	else {                                           //一个或没有儿子的情况
-	
 		Tmp = T;
 		if (T->Left == NULL) {
 			T = T->Right;
@@ -180,15 +176,15 @@ SearchTree Delete(int x, SearchTree T)
 	}
 	return T;     
 }
-{% endhighlight %}
+```
 删除相对来说比较麻烦，因为涉及到两种不同的情况，首先依旧是利用递归找到要删除的节点位置，然后
 
 1. 一个或没有儿子。这种情况相对比较简单，只需要让其父节点直接指向该节点的儿子或者NULL，然后释放该节点即可。
-![4.gif](\img\in-post\Tree\5886e354811b6.gif)
+![4.gif](/img/in-post/Tree/5886e354811b6.gif)
 
 2. 两个儿子。这种情况则比较复杂，普遍处理的方法为找到其右子树中最小的值替代要删除的节点位置的值，然后再递归删除右子树中最小的那个节点。而最小的节点通常在左下角的位置，属于第一种的简单情况，所以第二次删除相对比较容易。
-![5.gif](\img\in-post\Tree\5886e48d705df.gif)
+![5.gif](/img/in-post/Tree/5886e48d705df.gif)
 
 > 图片和gif来自 [visualgo.net](https://visualgo.net/)
-> 
-> 源代码均以上传至[GitHub](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Tree)
+>
+> 源代码均以上传至 [GitHub](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Tree)
