--- a/_posts/2017-7-27-BFS&DFS.md
+++ b/_posts/2017-7-27-BFS&DFS.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "广度优先搜索( BFS )和深度优先搜索( DFS )"
-subtitle:   ""
+title:      "广度优先搜索和深度优先搜索"
+subtitle:   "Breadth First Search & Depth First Search"
 date:       2017-7-27
 author:     "ZingLix"
 header-img: "img/post-8.jpg"
@@ -15,7 +15,9 @@ tags:
 ## 广度优先搜索
 
 广度优先搜索，又名宽度优先搜索，从根节点开始，沿着宽度遍历整张图，直到所有节点都被访问过为止。在下图可以清楚的看出这一点。
+
 ![BFS-Ex.gif](/img/in-post/DFS&BFS/BFS-Ex.gif)
+
 在算法中，每一个结点都被涂上一个颜色，白色、灰色和黑色，白色代表尚未发现，灰色代表被发现但尚未检查，颜色即将改变，黑色代表访问完毕。此外利用一个优先队列记录被发现的但未访问完成的节点，即灰色节点。同时，在搜索同时会生成一颗广度优先树，所以对于每个节点都定义一个属性 $$ pi $$，用以保存前驱结点。
 
 具体实现方法为：  
@@ -31,31 +33,25 @@ tags:
 
 实现代码：
 
-{% highlight c++ %}
 
+``` cpp
 // 此代码中以邻接矩阵graph的形式来实现
-
 // 所有结点被存储在数组vertex中，并对每个结点标号 0, 1, 2......，总共 v 个结点
-
 // 函数传进参数 s，表示结点编号
 
 void Graph::BFS(int s) {
-       // 步骤 1
-       
+  // 步骤 1
 	for (int i = 0; i < v; i++) {
 		vertex[i].color = WHITE;
 		vertex[i].pi = nullptr;
 	}
 	// 步骤 2
-	
 	vertex[s].color = GRAY;
 	vertex[s].pi = nullptr;
 	std::priority_queue<int> Q;
 	Q.push(s);
 	while (Q.empty() != true) {          //步骤 5 循环
-	
-		// 步骤 3 
-		
+		// 步骤 3
 		int u = Q.top();
 		Q.pop();
 		for (int i = 0; i < v; i++) {
@@ -68,18 +64,18 @@ void Graph::BFS(int s) {
 			}
 		}
 		// 步骤 4
-		
 		vertex[u].color = BLACK;
 	}
 }
-
-{% endhighlight %}
+```
 
 
 ## 深度优先搜索
 
 深度优先搜索相对于广度优先而言，顾名思义，会优先沿着一条路走到底，之后再回退，再选择其他的路继续。
+
 ![DFS-Ex.gif](/img/in-post/DFS&BFS/DFS-Ex.gif)
+
 与广度优先搜索相同，会使用黑白灰三色来标记结点，用 $$ pi $$ 标记前驱结点以实现深度优先树。
 
 具体实现方法中会涉及两个函数 DFS 和 DFS-Visit ，DFS 中负责初始化和对每一个结点进行搜索，DFS-Visit 则对给定结点进行搜索。
@@ -99,23 +95,18 @@ DFS-Visit 要求传进一个结点 u ，具体内容为：
 
 具体实现代码：
 
-{% highlight c++ %}
-
+``` cpp
 // 此代码中以邻接矩阵graph的形式来实现
-
 // 所有结点被存储在数组vertex中，并对每个结点标号 0, 1, 2......，总共 v 个结点
-
 // 函数传进参数 i，表示结点编号
 
 void Graph::DFS() {
        // 步骤 1
-       
 	for (int i = 0; i < v; i++) {
 		vertex[i].color = WHITE;
 		vertex[i].pi = nullptr;
 	}
 	// 步骤 2
-	
 	for (int i = 0; i < v; i++) {
 		if (vertex[i].color == WHITE) {
 			DFSVisit(i);
@@ -125,41 +116,35 @@ void Graph::DFS() {
 
 void Graph::DFSVisit(int i) {
 	// 步骤 1
-	
 	vertex[i].color = GRAY;
 	// 步骤 2
-	
 	for (int j = 0; j < v; j++) {
 		if (graph[i][j] != 0) {
 			if (vertex[j].color == WHITE) {
 				vertex[j].pi = &vertex[i];
 				DFSVisit(j);    // 递归方式继续搜索
-				
+
 			}
 		}
 	}
 	// 步骤 3
-	
 	vertex[i].color = BLACK;
 }
-
-{% endhighlight %}
+```
 
 ## 简化
 
 从上述代码中可以看出，在检查一个结点是否访问过时，是以是否为白色为根据，所以黑色与灰色结点在实际实现中作用相同，仅帮助理解之用。同时，如果不使用到生成树的形式，$$ pi $$ 同样可以被省略。
 
 精简后的 DFS :
-{% highlight c++ %}
 
+``` cpp
 // 代码中变量定义与之前相同
-
 // visited用以记录结点是否被访问过
 
 
 void Graph::DFS_Simplified(int s) {
 	for (int i = 0; i < v; i++) visited[i] = 0;   // 初始化访问状态
-	
 	DFSVisit_Simplified(s);
 }
 
@@ -167,11 +152,11 @@ void Graph::DFSVisit_Simplified(int i) {
 	visited[i] = 1;
 	for (int j = 0; j < v; j++) {
 	       // 如果与结点 i 相连的结点未被访问，则对其访问
-	       
 		if (graph[i][j] != 0 && visited[j] == 0) DFSVisit_Simplified(j);
 	}
 }
+```
 
-{% endhighlight %}
-
+> 图片和gif来自 [visualgo.net](https://visualgo.net/)
+>
 > [Source Code Here](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Graph)
