--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "数据结构 - 二叉搜索树"
-subtitle:   ""
+subtitle:   "Data Structures - Binary Search Tree"
 date:       2017-1-23
 author:     "ZingLix"
 header-img: "img/post-4.jpg"
@@ -12,7 +12,7 @@ tags:
 ---
 
 ## 基本概念-树
-根据Wiki的定义，树（英语：tree）是一种抽象数据类型（ADT）或是实作这种抽象数据类型的数据结构，用来模拟具有树状结构性质的数据集合。它是由n（n>=1）个有限节点组成一个具有层次关系的集合。有以下几个特点：
+根据Wiki的定义，树（Tree）是一种抽象数据类型（ADT）或是实作这种抽象数据类型的数据结构，用来模拟具有树状结构性质的数据集合。它是由n（n>=1）个有限节点组成一个具有层次关系的集合。有以下几个特点：
 - 每个节点有零个或多个子节点；
 - 没有父节点的节点称为根节点；
 - 每一个非根节点有且只有一个父节点；
@@ -174,7 +174,7 @@ SearchTree Delete(int x, SearchTree T)
 		}
 		free(Tmp);
 	}
-	return T;     
+	return T;
 }
 ```
 删除相对来说比较麻烦，因为涉及到两种不同的情况，首先依旧是利用递归找到要删除的节点位置，然后
