--- a/_posts/2017-3-26-Stack.md
+++ b/_posts/2017-3-26-Stack.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "数据结构 - 堆栈"
-subtitle:   ""
+subtitle:   "Data Structures - Stack"
 date:       2017-3-26
 author:     "ZingLix"
 header-img: "img/post-6.jpg"
@@ -16,7 +16,7 @@ tags:
 ![QQ截图20170326220642.png](/img/in-post/Stack/58d7cb075169b.png)
 
 ## 原型声明
-除了构造和析构函数外，根据定义，最主要的即为Pop和Push两个操作，在此基础上加上返回栈顶元素（Top），判断是否为空栈（IsEmpty）和将栈置空（MakeEmpty）三个功能。  
+除了构造和析构函数外，根据定义，最主要的即为Pop和Push两个操作，在此基础上加上返回栈顶元素（Top），判断是否为空栈（IsEmpty）和将栈置空（MakeEmpty）三个功能。
 在本文中，每个栈都有一个表头，不记录数据，只用来记录栈顶位置。
 ``` cpp
 struct Node
