--- a/_posts/2017-3-3-Sort.md
+++ b/_posts/2017-3-3-Sort.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "算法 - 内部排序"
-subtitle:   ""
+subtitle:   "Algorithm - Sort"
 date:       2017-3-3
 author:     "ZingLix"
 header-img: "img/post-5.jpg"
