--- a/_posts/2017-5-15-Heap.md
+++ b/_posts/2017-5-15-Heap.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "二叉堆及堆排序"
-subtitle:   ""
+subtitle:   "Binary Heap & Heap Sort"
 date:       2017-5-15
 author:     "ZingLix"
 header-img: "img/post-5.jpg"
