--- a/_posts/2017-7-26-Graph.md
+++ b/_posts/2017-7-26-Graph.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "图的概念及表示"
-subtitle:   ""
+subtitle:   "Data Structures - Graph"
 date:       2017-7-26
 author:     "ZingLix"
 header-img: "img/post-8.jpg"
@@ -50,7 +50,7 @@ tags:
 
 ## 比较
 
-两种表示方法都可以很好的表示一张图，但是邻接链表无法快速给出两个顶点间边的性质，相对而言邻接矩阵很好的克服了这一问题，但同时付出了更大的存储空间作为代价。  
+两种表示方法都可以很好的表示一张图，但是邻接链表无法快速给出两个顶点间边的性质，相对而言邻接矩阵很好的克服了这一问题，但同时付出了更大的存储空间作为代价。
 所以一般而言，在图的规模较小的情况下，更倾向于用邻接矩阵的方式来表示。
 
 > 图片和gif来自 [visualgo.net](https://visualgo.net/)
