--- a/_posts/2017-3-3-Sort.md
+++ b/_posts/2017-3-3-Sort.md
@@ -24,7 +24,7 @@ tags:
 ![bubble_sort.gif](/img/in-post/Sort/58c55b63520ba.gif)
 
 由于冒泡排序效率太低，实际应用不广泛，在此不做太多讨论，代码如下：
-``` cpp
+``` java
 void bubble_sort(int dat[], int n) {
 	for (int i = n-1; i >= 0; i--) {
 		for (int j = 0; j < i; j++) {
@@ -41,7 +41,7 @@ void bubble_sort(int dat[], int n) {
 ![insert_sort.gif](/img/in-post/Sort/58c55d4b3efc7.gif)
 
 由于交换次数过多，而每次调用swap函数会导致额外的时间花销，所以这里采用用tmp先记录要要排序的那个元素，然后每次交换时只将后一个元素赋值前一个元素，直到找到正确的位置，将tmp赋值给它，从而避免使用swap。代码如下：
-``` cpp
+``` java
 void insert_sort(int dat[], int n) {
 	int tmp,j;
 	for (int p = 1; p < n; p++) {
@@ -61,7 +61,7 @@ void insert_sort(int dat[], int n) {
 ![merge_sort.gif](/img/in-post/Sort/58c55ff95099a.gif)
 
 所以分为以下三个部分：
-``` cpp
+``` java
 //入口函数，负责创建临时数组
 void merge_sort(int dat[], int n);
 //利用递归对小数组进行排序
@@ -74,7 +74,7 @@ void Merge(int dat[],int tmp[], int leftStart, int rightStart, int rightEnd);
 再将另一个数组剩下的元素拷贝至tmp中，最后把tmp复制到原数组中。
 
 具体代码如下：
-``` cpp
+``` java
 void merge_sort(int dat[], int n) {
 	int * tmp = new int[n];
 	Msort(dat, tmp, 0, n-1);
@@ -119,7 +119,7 @@ void Merge(int dat[],int tmp[], int leftStart, int rightStart, int rightEnd) {
 图中黄色为枢纽元，绿色为比枢纽元小的部分，紫色为比其大的部分。
 
 图中采用第一个元素为枢纽元，下面代码中采用随机元素作为枢纽元，比起前一个方法较为安全，还有一个做法是使用中值进行分割，会在之后进行讨论。具体代码如下：
-``` cpp
+``` java
 void quick_sort(int dat[], int n) {
 	Qsort(dat, 0, n - 1);
 }
