--- a/_posts/2017-7-27-BFS&DFS.md
+++ b/_posts/2017-7-27-BFS&DFS.md
@@ -33,7 +33,7 @@ tags:
 
 实现代码：
 
-``` cpp
+``` java
 // 此代码中以邻接矩阵graph的形式来实现
 // 所有结点被存储在数组vertex中，并对每个结点标号 0, 1, 2......，总共 v 个结点
 // 函数传进参数 s，表示结点编号
@@ -94,7 +94,7 @@ DFS-Visit 要求传进一个结点 u ，具体内容为：
 
 具体实现代码：
 
-``` cpp
+``` java
 // 此代码中以邻接矩阵graph的形式来实现
 // 所有结点被存储在数组vertex中，并对每个结点标号 0, 1, 2......，总共 v 个结点
 // 函数传进参数 i，表示结点编号
@@ -137,7 +137,7 @@ void Graph::DFSVisit(int i) {
 
 精简后的 DFS :
 
-``` cpp
+``` java
 // 代码中变量定义与之前相同
 // visited用以记录结点是否被访问过
 
