--- a/_posts/2017-1-23-Tree.md
+++ b/_posts/2017-1-23-Tree.md
@@ -47,9 +47,9 @@ SearchTree Delete(int x, SearchTree T);
 
 struct TreeNode
 {
-	int data;
-	TreeNode *Left;
-	TreeNode *Right;
+    int data;
+    TreeNode *Left;
+    TreeNode *Right;
 };
 ```
 
@@ -61,13 +61,13 @@ struct TreeNode
 ``` cpp
 SearchTree MakeEmpty(SearchTree T)
 {
-	if (T != NULL) {
-		MakeEmpty(T->Left);
-		MakeEmpty(T->Right);
-		free(T);
-		T = NULL;
-	}
-	return T;
+    if (T != NULL) {
+        MakeEmpty(T->Left);
+        MakeEmpty(T->Right);
+        free(T);
+        T = NULL;
+    }
+    return T;
 }
 ```
 即递归的清空每一个树节点释放其内存。
@@ -76,16 +76,16 @@ SearchTree MakeEmpty(SearchTree T)
 ``` cpp
 Position Find(int x, SearchTree T)
 {
-	if (T == NULL) return NULL;
-	if (x < T->data) {
-		return Find(x, T->Left);
-	}
-	else if (x>T->data) {
-		return Find(x, T->Right);
-	}
-	else {
-		return T;
-	}
+    if (T == NULL) return NULL;
+    if (x < T->data) {
+        return Find(x, T->Left);
+    }
+    else if (x>T->data) {
+        return Find(x, T->Right);
+    }
+    else {
+        return T;
+    }
 }
 ```
 传入要查找的值和根节点，根据二叉查找树的定义，比某个节点大则去右侧找，同样若比某个节点小则去左边找，然后递归的实现。
@@ -97,25 +97,25 @@ Position Find(int x, SearchTree T)
 ``` cpp
 Position FindMin(SearchTree T)
 {
-	if (T == NULL) {
-		return NULL;
-	}
-	else if (T->Left == NULL) {
-		return T;
-	}
-	else {
-		return FindMin(T->Left);
-	}
+    if (T == NULL) {
+        return NULL;
+    }
+    else if (T->Left == NULL) {
+        return T;
+    }
+    else {
+        return FindMin(T->Left);
+    }
 }
 
 Position FindMax(SearchTree T)
 {
-	if (T != NULL) {
-		while (T->Right != NULL) {
-			T = T->Right;
-		}
-	}
-	return T;
+    if (T != NULL) {
+        while (T->Right != NULL) {
+            T = T->Right;
+        }
+    }
+    return T;
 }
 ```
 根据二叉搜索树性质，最大最小值必然分别出现在右下角和左下角，不断向右到底和向左到底即可完成。其中查找最小值利用递归实现，查找最大值利用循环实现。
@@ -127,19 +127,19 @@ Position FindMax(SearchTree T)
 ``` cpp
 SearchTree Insert(int x, SearchTree T)
 {
-	if (T == NULL) {
-		T = (TreeNode* )malloc(sizeof(TreeNode));
-		T->data = x;
-		T->Left = NULL;
-		T->Right = NULL;
-	}
-	else if (x < T->data) {
-		T->Left = Insert(x, T->Left);
-	}
-	else if (x > T->data) {
-		T->Right = Insert(x, T->Right);
-	}
-	return T;
+    if (T == NULL) {
+        T = (TreeNode* )malloc(sizeof(TreeNode));
+        T->data = x;
+        T->Left = NULL;
+        T->Right = NULL;
+    }
+    else if (x < T->data) {
+        T->Left = Insert(x, T->Left);
+    }
+    else if (x > T->data) {
+        T->Right = Insert(x, T->Right);
+    }
+    return T;
 }
 ```
 同样利用二叉搜索树性质，找到其所对应的父节点，然后当传入NULL的时候即代表这是所要插入的位置，返回新增节点地址，从而使得父节点可以指向新增节点，从而完成插入。
@@ -148,33 +148,33 @@ SearchTree Insert(int x, SearchTree T)
 
 
 ## 删除
-``` java
+``` cpp
 SearchTree Delete(int x, SearchTree T)
 {
-	Position Tmp;
-	if (x < T->data) {
-		T->Left=Delete(x, T->Left);
-	}
-	else if(x > T->data) {
-		T->Right=Delete(x, T->Right);
-	}//找到所要删除的节点
-	else
-	if (T->Left != NULL&&T->Right!= NULL) {  //两个儿子的情况
-		Tmp = FindMin(T->Right);
-		T->data = Tmp->data;
-		T->Right = Delete(T->data, T->Right);
-	}
-	else {                                           //一个或没有儿子的情况
-		Tmp = T;
-		if (T->Left == NULL) {
-			T = T->Right;
-		}
-		else if (T->Right == NULL) {
-			T = T->Left;
-		}
-		free(Tmp);
-	}
-	return T;
+    Position Tmp;
+    if (x < T->data) {
+        T->Left=Delete(x, T->Left);
+    }
+    else if(x > T->data) {
+        T->Right=Delete(x, T->Right);
+    }//找到所要删除的节点
+    else
+    if (T->Left != NULL&&T->Right!= NULL) {  //两个儿子的情况
+        Tmp = FindMin(T->Right);
+        T->data = Tmp->data;
+        T->Right = Delete(T->data, T->Right);
+    }
+    else {                                           //一个或没有儿子的情况
+        Tmp = T;
+        if (T->Left == NULL) {
+            T = T->Right;
+        }
+        else if (T->Right == NULL) {
+            T = T->Left;
+        }
+        free(Tmp);
+    }
+    return T;
 }
 ```
 删除相对来说比较麻烦，因为涉及到两种不同的情况，首先依旧是利用递归找到要删除的节点位置，然后
