--- a/_posts/2017-5-15-Heap.md
+++ b/_posts/2017-5-15-Heap.md
@@ -14,85 +14,98 @@ tags:
 ---
 
 二叉堆，简称堆(Heap)，可以被看成近似的完全二叉树，除了最底层外这棵树是充满的。
+
 ![heap.jpg](/img/in-post/Heap/heap.jpg)
+
 如图所示，从顶层元素开始标号。由于除了底层外能保证是充满的，所以二叉堆可以用数组来实现。
 
 ## 最大（最小）堆
+
 最大（最小）堆的定义为：对于除了根以外任何节点都要满足该节点的值大（小）于其子节点的值。上图所示即为最大堆。
 本文中以最大堆为例。
 
 ## 基本操作&原型
+
 在具体编程中，为了编程的方便，在实际实现中与之前所定义的略有区别。
 由于实际编程中数组下标从0开始，所以在下面程序中，堆中序号均从0开始。为了堆可增长，所以采用容器来代替数组。下面给出原型：
+
 ``` cpp
 class Heap {
 public:
-	Heap();
-	Heap(vector<int> vec);
-	int left(int i);
-	int right(int i);
-	int parent(int i);
-	int GetSize();
-	void MaxHeapify(int i);
-	void MaxHeapify(int i, int size);
-	void BuildMaxHeap();
-	void HeapSort();
-	void SetVec(vector<int> vec);
-	int& operator[](int i);
+    Heap();
+    Heap(vector<int> vec);
+    int left(int i);
+    int right(int i);
+    int parent(int i);
+    int GetSize();
+    void MaxHeapify(int i);
+    void MaxHeapify(int i, int size);
+    void BuildMaxHeap();
+    void HeapSort();
+    void SetVec(vector<int> vec);
+    int& operator[](int i);
 
 protected:
-	vector<int> heap;
+    vector<int> heap;
 };
 ```
 
 其中left,right,parent三个函数分别返回i号元素的左节点、右节点、父节点的下标，GetSize返回堆大小。重载下标操作符为了使用heap中元素更为方便。SetVec用来给堆赋值。这些基本操作不涉及核心算法，由于篇幅原因在此不再给出，可以[在此](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Heap)查看。
 
 ## MaxHeapify 维护堆的性质
+
 由于可能在某些操作后，某个节点并不满足最大堆性质，可能小于某个子节点的值，所以用MaxHeapify用来维护堆的性质，使该点满足最大堆性质。具体做法为判断该点的值与两个子节点的值大小关系，将最大的与该点交换，如果无需交换则已满足最大堆性质，如果交换则对交换一边子树继续维护堆性质。演示动画在建堆中给出，对于其中每个点进行的操作即为MaxHeapify。
+
 ``` cpp
 void Heap::MaxHeapify(int i)
 {
-	size_t l = left(i), r = right(i),max=i;
-	if (l<heap.size() && heap[l]>heap[max]) {
-		max = l;
-	}
-	if (r<heap.size() && heap[r]>heap[max]) {
-		max = r;
-	}
-	if (max != i) {
-		swap(heap[i], heap[max]);
-		MaxHeapify(max);
-	}
+    size_t l = left(i), r = right(i),max=i;
+    if (l<heap.size() && heap[l]>heap[max]) {
+        max = l;
+    }
+    if (r<heap.size() && heap[r]>heap[max]) {
+        max = r;
+    }
+    if (max != i) {
+        swap(heap[i], heap[max]);
+        MaxHeapify(max);
+    }
 }
 ```
+
 在原型中还给出了一个带i和size两个参数的MaxHeapify，具体实现中仅仅使用参数size代替了heap.size()，具体原因会在之后HeapSort中解释。
 
 ## BuildHeap 建堆
+
 建堆目的为使一个不满足最大堆性质的数组成为最大堆。由于MaxHeapify可以使某个节点满足最大堆性质，所以我们只需要从底向上依次调用MaxHeapify即可。又因为从n/2+1, ...... , n均为叶节点，所以我们只需要从n/2开始。
+
 ![CreateHeap1.gif](/img/in-post/Heap/CreateHeap1.gif)
+
 ``` cpp
 void Heap::BuildMaxHeap()
 {
-	for (int i = this->GetSize() / 2; i >= 0; i--) {
-		MaxHeapify(i);
-	}
+    for (int i = this->GetSize() / 2; i >= 0; i--) {
+        MaxHeapify(i);
+    }
 }
 ```
 
 ## HeapSort 堆排序
+
 在之前我们已经了解对于二叉堆，每个节点必大于它的子节点，因此根节点必定为整个堆中最大的数字。所以我们每次得到最大的数字后，将其从堆中移出然后维护一次堆的性质又可以得到新堆中最大的元素，按照顺序逆序输出就是排序完的数组。
+
 ![HeapSort.gif](/img/in-post/Heap/HeapSort.gif)
+
 具体实现中，我们将最大的元素放至堆的末尾，与最后一个元素互换，将堆大小减一后再对根节点维护性质，从而得到新堆，不断循环，最后堆就可完成排序。由于之前MaxHeapify中利用heap.size()来得到长度，但在这中我们并未实际改变容器长度，所以就用一个带size参数的MaxHeapify来模拟size的减少。
+
 ``` cpp
 void Heap::HeapSort()
 {
-	for (int i = this->GetSize()-1; i >= 0; i--) {
-		swap(heap[i], heap[0]);
-		MaxHeapify(0, i );
-	}
+    for (int i = this->GetSize()-1; i >= 0; i--) {
+        swap(heap[i], heap[0]);
+        MaxHeapify(0, i );
+    }
 }
 ```
 
-> 图片和gif来自 [visualgo.net](https://visualgo.net/)
->
-> 源代码均以上传至 [GitHub](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Heap)
+> 图片和gif根据 [visualgo.net](https://visualgo.net/) 制作
