--- a/_posts/2017-7-27-BFS&DFS.md
+++ b/_posts/2017-7-27-BFS&DFS.md
@@ -33,38 +33,38 @@ tags:
 
 实现代码：
 
-``` java
+``` cpp
 // 此代码中以邻接矩阵graph的形式来实现
 // 所有结点被存储在数组vertex中，并对每个结点标号 0, 1, 2......，总共 v 个结点
 // 函数传进参数 s，表示结点编号
 
 void Graph::BFS(int s) {
   // 步骤 1
-	for (int i = 0; i < v; i++) {
-		vertex[i].color = WHITE;
-		vertex[i].pi = nullptr;
-	}
-	// 步骤 2
-	vertex[s].color = GRAY;
-	vertex[s].pi = nullptr;
-	std::priority_queue<int> Q;
-	Q.push(s);
-	while (Q.empty() != true) {          //步骤 5 循环
-		// 步骤 3
-		int u = Q.top();
-		Q.pop();
-		for (int i = 0; i < v; i++) {
-			if (graph[u][i] != 0) {
-				if (vertex[i].color == WHITE) {
-					vertex[i].color = GRAY;
-					vertex[i].pi = &vertex[u];
-					Q.push(i);
-				}
-			}
-		}
-		// 步骤 4
-		vertex[u].color = BLACK;
-	}
+    for (int i = 0; i < v; i++) {
+        vertex[i].color = WHITE;
+        vertex[i].pi = nullptr;
+    }
+    // 步骤 2
+    vertex[s].color = GRAY;
+    vertex[s].pi = nullptr;
+    std::priority_queue<int> Q;
+    Q.push(s);
+    while (Q.empty() != true) {          //步骤 5 循环
+        // 步骤 3
+        int u = Q.top();
+        Q.pop();
+        for (int i = 0; i < v; i++) {
+            if (graph[u][i] != 0) {
+                if (vertex[i].color == WHITE) {
+                    vertex[i].color = GRAY;
+                    vertex[i].pi = &vertex[u];
+                    Q.push(i);
+                }
+            }
+        }
+        // 步骤 4
+        vertex[u].color = BLACK;
+    }
 }
 ```
 
@@ -94,40 +94,40 @@ DFS-Visit 要求传进一个结点 u ，具体内容为：
 
 具体实现代码：
 
-``` java
+``` cpp
 // 此代码中以邻接矩阵graph的形式来实现
 // 所有结点被存储在数组vertex中，并对每个结点标号 0, 1, 2......，总共 v 个结点
 // 函数传进参数 i，表示结点编号
 
 void Graph::DFS() {
        // 步骤 1
-	for (int i = 0; i < v; i++) {
-		vertex[i].color = WHITE;
-		vertex[i].pi = nullptr;
-	}
-	// 步骤 2
-	for (int i = 0; i < v; i++) {
-		if (vertex[i].color == WHITE) {
-			DFSVisit(i);
-		}
-	}
+    for (int i = 0; i < v; i++) {
+        vertex[i].color = WHITE;
+        vertex[i].pi = nullptr;
+    }
+    // 步骤 2
+    for (int i = 0; i < v; i++) {
+        if (vertex[i].color == WHITE) {
+            DFSVisit(i);
+        }
+    }
 }
 
 void Graph::DFSVisit(int i) {
-	// 步骤 1
-	vertex[i].color = GRAY;
-	// 步骤 2
-	for (int j = 0; j < v; j++) {
-		if (graph[i][j] != 0) {
-			if (vertex[j].color == WHITE) {
-				vertex[j].pi = &vertex[i];
-				DFSVisit(j);    // 递归方式继续搜索
+    // 步骤 1
+    vertex[i].color = GRAY;
+    // 步骤 2
+    for (int j = 0; j < v; j++) {
+        if (graph[i][j] != 0) {
+            if (vertex[j].color == WHITE) {
+                vertex[j].pi = &vertex[i];
+                DFSVisit(j);    // 递归方式继续搜索
 
-			}
-		}
-	}
-	// 步骤 3
-	vertex[i].color = BLACK;
+            }
+        }
+    }
+    // 步骤 3
+    vertex[i].color = BLACK;
 }
 ```
 
@@ -137,25 +137,24 @@ void Graph::DFSVisit(int i) {
 
 精简后的 DFS :
 
-``` java
+``` cpp
 // 代码中变量定义与之前相同
 // visited用以记录结点是否被访问过
 
 
 void Graph::DFS_Simplified(int s) {
-	for (int i = 0; i < v; i++) visited[i] = 0;   // 初始化访问状态
-	DFSVisit_Simplified(s);
+    for (int i = 0; i < v; i++) visited[i] = 0;   // 初始化访问状态
+    DFSVisit_Simplified(s);
 }
 
 void Graph::DFSVisit_Simplified(int i) {
-	visited[i] = 1;
-	for (int j = 0; j < v; j++) {
-	       // 如果与结点 i 相连的结点未被访问，则对其访问
-		if (graph[i][j] != 0 && visited[j] == 0) DFSVisit_Simplified(j);
-	}
+    visited[i] = 1;
+    for (int j = 0; j < v; j++) {
+           // 如果与结点 i 相连的结点未被访问，则对其访问
+        if (graph[i][j] != 0 && visited[j] == 0) DFSVisit_Simplified(j);
+    }
 }
 ```
 
-> 图片和gif来自 [visualgo.net](https://visualgo.net/)
->
-> [Source Code Here](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Graph)
+> 图片和gif根据 [visualgo.net](https://visualgo.net/) 制作
+
