--- a/_posts/2017-11-14-mst.markdown
+++ b/_posts/2017-11-14-mst.markdown
@@ -26,25 +26,25 @@ Kruskal 算法中先用一个不相交集将每一个结点都当作一棵树的
 
 如下为 Kruskal 算法的示例代码。
 
-``` java
+``` cpp
 void Graph::MST_Kruskal()
 {
   DisjointSet<Vertex*> Set(G);     //将所有结点放入不相交集中并互相独立
-	priority_queue<Edge*> H;      //用一个优先队列来保证边的权重从小到大
+    priority_queue<Edge*> H;      //用一个优先队列来保证边的权重从小到大
 
-	for (int i = 0; i < v; i++) {
-		for (int j = 0; j < i; j++) {
-			if (graph[i][j] != 0) H.push(&graph[i][j]);
-		}
-	}
-	Edge E;
-	while (!H.empty()) {
-		E = *H.top();
-		if (Set.Find(E.v1) != Set.Find(E.v2)) {   //判断两个结点是否处于同一颗树中
-			Set.Union(E.v1, E.v2);
-		}
-		H.pop();
-	}
+    for (int i = 0; i < v; i++) {
+        for (int j = 0; j < i; j++) {
+            if (graph[i][j] != 0) H.push(&graph[i][j]);
+        }
+    }
+    Edge E;
+    while (!H.empty()) {
+        E = *H.top();
+        if (Set.Find(E.v1) != Set.Find(E.v2)) {   //判断两个结点是否处于同一颗树中
+            Set.Union(E.v1, E.v2);
+        }
+        H.pop();
+    }
 }
 ```
 
@@ -60,25 +60,25 @@ Prim 算法可以从任意一个结点开始，然后逐步长大直至所有的
 
 如下代码展示了主要的操作，省略了部分细节。
 
-``` java
+``` cpp
 void Graph::MST_Prim(Vertex V) {
-	for (int i = 0; i < v; i++) {  //将所有结点初始化
-		Ver[i].key = INF;
-		Ver[i].parent = nullptr;
-	}
-	V.key = 0;
-	std::priority_queue<Vertex> Q(G);  //以key为属性维护优先队列
-	Vertex u;
-	while (!Q.empty()) {
-		u = Q.top();
-		for (int i = 0; i < v; i++) {   //遍历所有与 u 相连结点
-			Vertex tmp = Ver[i];
-			if (edge[u][tmp] != 0 && edge[u][tmp] < tmp.key) {  //如果存在边且权重小
-				Ver[i].parent = u;
-				Ver[i].key = edge[u][tmp];
-			}
-		}
-		Q.pop();
-	}
+    for (int i = 0; i < v; i++) {  //将所有结点初始化
+        Ver[i].key = INF;
+        Ver[i].parent = nullptr;
+    }
+    V.key = 0;
+    std::priority_queue<Vertex> Q(G);  //以key为属性维护优先队列
+    Vertex u;
+    while (!Q.empty()) {
+        u = Q.top();
+        for (int i = 0; i < v; i++) {   //遍历所有与 u 相连结点
+            Vertex tmp = Ver[i];
+            if (edge[u][tmp] != 0 && edge[u][tmp] < tmp.key) {  //如果存在边且权重小
+                Ver[i].parent = u;
+                Ver[i].key = edge[u][tmp];
+            }
+        }
+        Q.pop();
+    }
 }
 ```
