--- a/_posts/2017-3-3-Sort.md
+++ b/_posts/2017-3-3-Sort.md
@@ -24,13 +24,14 @@ tags:
 ![bubble_sort.gif](/img/in-post/Sort/58c55b63520ba.gif)
 
 由于冒泡排序效率太低，实际应用不广泛，在此不做太多讨论，代码如下：
-``` java
+
+``` cpp
 void bubble_sort(int dat[], int n) {
-	for (int i = n-1; i >= 0; i--) {
-		for (int j = 0; j < i; j++) {
-			if (dat[j] > dat[j + 1]) swap(&dat[j], &dat[j + 1]);
-		}
-	}
+    for (int i = n-1; i >= 0; i--) {
+        for (int j = 0; j < i; j++) {
+            if (dat[j] > dat[j + 1]) swap(&dat[j], &dat[j + 1]);
+        }
+    }
 }
 ```
 
@@ -41,16 +42,17 @@ void bubble_sort(int dat[], int n) {
 ![insert_sort.gif](/img/in-post/Sort/58c55d4b3efc7.gif)
 
 由于交换次数过多，而每次调用swap函数会导致额外的时间花销，所以这里采用用tmp先记录要要排序的那个元素，然后每次交换时只将后一个元素赋值前一个元素，直到找到正确的位置，将tmp赋值给它，从而避免使用swap。代码如下：
-``` java
+
+``` cpp
 void insert_sort(int dat[], int n) {
-	int tmp,j;
-	for (int p = 1; p < n; p++) {
-		tmp = dat[p];
-		for (j = p; j > 0 && dat[j-1] > tmp; j--) {
-			dat[j] = dat[j-1];
-		}
-		dat[j ] = tmp;
-	}
+    int tmp,j;
+    for (int p = 1; p < n; p++) {
+        tmp = dat[p];
+        for (j = p; j > 0 && dat[j-1] > tmp; j--) {
+            dat[j] = dat[j-1];
+        }
+        dat[j ] = tmp;
+    }
 }
 ```
 
@@ -61,7 +63,8 @@ void insert_sort(int dat[], int n) {
 ![merge_sort.gif](/img/in-post/Sort/58c55ff95099a.gif)
 
 所以分为以下三个部分：
-``` java
+
+``` cpp
 //入口函数，负责创建临时数组
 void merge_sort(int dat[], int n);
 //利用递归对小数组进行排序
@@ -69,80 +72,86 @@ void Msort(int dat[],int tmp[], int left, int right);
 //将两个小数组合并
 void Merge(int dat[],int tmp[], int leftStart, int rightStart, int rightEnd);
 ```
+
 其中最为重要的就在于Merge函数，思路主要是先不断比较小数组前面的元素，直到将其中一个小数组全部拷贝至tmp中。
-![QQ截图20170313133049.png](/img/in-post/Sort/58c62e9d959db.png)
+
+![](/img/in-post/Sort/58c62e9d959db.png)
+
 再将另一个数组剩下的元素拷贝至tmp中，最后把tmp复制到原数组中。
 
 具体代码如下：
-``` java
+``` cpp
 void merge_sort(int dat[], int n) {
-	int * tmp = new int[n];
-	Msort(dat, tmp, 0, n-1);
-	delete  tmp;
+    int * tmp = new int[n];
+    Msort(dat, tmp, 0, n-1);
+    delete  tmp;
 }
 
 void Msort(int dat[],int tmp[], int left, int right) {
-	int center = (left + right) / 2;
-	if (left < right) {
-		Msort(dat, tmp, left, center);
-		Msort(dat, tmp, center + 1, right);
-		Merge(dat, tmp, left, center + 1, right);
-	}
+    int center = (left + right) / 2;
+    if (left < right) {
+        Msort(dat, tmp, left, center);
+        Msort(dat, tmp, center + 1, right);
+        Merge(dat, tmp, left, center + 1, right);
+    }
 }
 
 void Merge(int dat[],int tmp[], int leftStart, int rightStart, int rightEnd) {
-	int *Aptr = &dat[leftStart], *Bptr = &dat[rightStart],*ptr=&tmp[leftStart];
-	int leftEnd = rightStart - 1;
-	//拷贝其中一个数组
-	while (Aptr <= &dat[leftEnd] && Bptr <= &dat[rightEnd]) {
-		if (*Aptr < *Bptr) {
-			*ptr++ = *Aptr++;
-		}
-		else {
-			*ptr++ = *Bptr++;
-		}
-	}
-	//拷贝剩余数组内所有元素
-	while (Aptr <= &dat[leftEnd])
-		*ptr++ = *Aptr++;
-	while (Bptr <= &dat[rightEnd])
-		*ptr++ = *Bptr++;
+    int *Aptr = &dat[leftStart], *Bptr = &dat[rightStart],*ptr=&tmp[leftStart];
+    int leftEnd = rightStart - 1;
+    //拷贝其中一个数组
+    while (Aptr <= &dat[leftEnd] && Bptr <= &dat[rightEnd]) {
+        if (*Aptr < *Bptr) {
+            *ptr++ = *Aptr++;
+        }
+        else {
+            *ptr++ = *Bptr++;
+        }
+    }
+    //拷贝剩余数组内所有元素
+    while (Aptr <= &dat[leftEnd])
+        *ptr++ = *Aptr++;
+    while (Bptr <= &dat[rightEnd])
+        *ptr++ = *Bptr++;
         //拷贝回原数组
-	for (int i = leftStart; i <= rightEnd; i++)
-		dat[i] = tmp[i];
+    for (int i = leftStart; i <= rightEnd; i++)
+        dat[i] = tmp[i];
 }
 ```
 
 ## 快速排序
+
 快速排序主要思想为先选取枢纽元，然后将比其小的放至其左侧，比其大的放至右侧，然后再分别以递归的方式对左右两侧元素处理。
+
 ![quick_sort.gif](/img/in-post/Sort/58c6307ff1b11.gif)
+
 图中黄色为枢纽元，绿色为比枢纽元小的部分，紫色为比其大的部分。
 
 图中采用第一个元素为枢纽元，下面代码中采用随机元素作为枢纽元，比起前一个方法较为安全，还有一个做法是使用中值进行分割，会在之后进行讨论。具体代码如下：
-``` java
+
+``` cpp
 void quick_sort(int dat[], int n) {
-	Qsort(dat, 0, n - 1);
+    Qsort(dat, 0, n - 1);
 }
 
 void Qsort(int dat[], int left,int right) {
-	if (right - left < 1) return;
-	int pivot = rand() % (right - left) + left;
-	swap(&dat[left], &dat[pivot]);
-	int j = left + 1;
-	for (int i = left + 1; i <= right; i++) {
-		if (dat[i] < dat[left]) swap(&dat[i], &dat[j++]);
-	}
-	swap(&dat[left], &dat[--j]);
+    if (right - left < 1) return;
+    int pivot = rand() % (right - left) + left;
+    swap(&dat[left], &dat[pivot]);
+    int j = left + 1;
+    for (int i = left + 1; i <= right; i++) {
+        if (dat[i] < dat[left]) swap(&dat[i], &dat[j++]);
+    }
+    swap(&dat[left], &dat[--j]);
 
-	Qsort(dat,left, j-1);
-	Qsort(dat, j+1,right);
+    Qsort(dat,left, j-1);
+    Qsort(dat, j+1,right);
 }
 
 ```
 
 ## 总结
+
 在这里我们所讨论的所有算法均以比较作为基础，所以都被称为比较排序。关于非比较排序[在此](/2017/05/08/External-Sort/)进行了讨论。在所有内部排序方法中，快速排序可以说是内部排序中最好的方法，当待排数据随机时所需平均时间最短。
 
-> 图片和gif来自 [visualgo.net](https://visualgo.net/)
->
-> 源代码均以上传至 [GitHub](https://github.com/ZingLix/Data-Structures-and-Algorithm/tree/master/Sort)
+> 图片和gif根据 [visualgo.net](https://visualgo.net/) 制作
