--- a/_posts/2018-6-14-topsort.md
+++ b/_posts/2018-6-14-topsort.md
@@ -10,7 +10,7 @@ tags:
     - 图
 ---
 
-## 什么是拓扑排序
+## 一、什么是拓扑排序
 
 在一个较为复杂的任务中，我们往往选择将其分解为数个较为简单的分任务，然后依次完成。这些分任务之间，有些具有依赖关系，必须先完成某一个才可以完成接下去的任务。类似于在学校中，为了获得学位，必须将所有课程修完。而在学习数据结构前，必须先学完某一门编程语言。或是如下，算法导论中的一个例子。
 
@@ -27,7 +27,7 @@ tags:
 
 之所以要求是有向无环图，是因为只有有向才能在两个结点间决定先后次序。而若是有环，那么根据第二个要求，若AB间成环，则存在从 A 到 B 和从 B 到 A 两条边，那么A 要出现在 B 之前，B 也要出现在A之前，在线性序列中不可能实现。
 
-## 实现
+## 二、实现
 
 拓扑排序利用两种图遍历方法都可以完成。
 
