--- a/_posts/2018-6-15-sssp.md
+++ b/_posts/2018-6-15-sssp.md
@@ -10,11 +10,11 @@ tags:
     - 图
 ---
 
-## 问题描述
+## 一、问题描述
 
 在图算法中，从某点开始，计算到其他点最短的路径是十分常见的问题，而这一问题有许多变种，本文着重于从某点开始到图中**所有**其他点的最短路径，称为 **单源最短路径问题（Single-source Shortest Paths）**。
 
-## 特殊情况
+## 二、特殊情况
 
 ### 负权重的边
 
@@ -26,7 +26,7 @@ tags:
 
 还有一种环路权重为 0 的情况，无论添加与否并不影响到总权重。为保证问题的一般性，最后结果以没有环路为准，也就是说无论什么情况，最终结果均**不含环路**。
 
-## 通用操作
+## 三、通用操作
 
 首先，为了算法的简单以及路径的表示，对于每个结点都维持两个属性：
 
@@ -62,7 +62,7 @@ relax(V u, V v){
 
 传入两个结点，如果 u 的当前权重大于 v 的权重加两个点之间的边权重，说明从 v 走到 u 的这条路径比原来的权重要低，所以更新 `u.d` 并使 u 的前驱结点设为 v 即可。
 
-## Bellman-Ford 算法
+## 四、Bellman-Ford 算法
 
 Bellman-Ford 算法中**不要求权重均为非负值**，而且会返回一个布尔值以表明是否存在源结点可到达的负权重环路。
 
@@ -89,7 +89,7 @@ bellman_ford(V s){
 
 算法中初始化需要 $$ \theta (V) $$，松弛操作用到两重循环，分别进行 $$ \vert V \vert -1 $$ 和 $$ \lvert E \rvert $$ 次，检查的循环进行 $$ \vert E\vert $$ 次。所以总运行时间由松弛操作的循环决定，时间为 $$ O(VE) $$ 。
 
-## 有向无环图中的单源最短路径
+## 五、有向无环图中的单源最短路径
 
 如标题所示，这一算法要求有向无环图。因为不成环，所以存在负权重的边也不影响到最短路径的存在。
 
@@ -112,7 +112,7 @@ DAG_SSSP(V s){
 
 拓扑排序时间复杂度为$$O(V+E)$$，初始化需要$$O(V)$$，松弛操作对每条边松弛，所以总时间为 $$O(V+E)$$。
 
-## Dijkstra 算法
+## 六、Dijkstra 算法
 
 Dijkstra 算法能解决有向图上的最短路径问题，但要求**所有边权重为非负值**。
 
