--- a/_posts/2018-6-15-sssp.md
+++ b/_posts/2018-6-15-sssp.md
@@ -134,5 +134,4 @@ dijkstra(V s){
 
 在整个过程中维护一个集合 S ，用于存放已经找到最短路径的结点，还有一个最小优先队列 Q ，每次从中找出最短路径估计最小的，即 Q 中第一个，加入 S ，并对其所有邻接边松弛。
 
-
-
+> Gif 根据[visugo.net](https://visualgo.net/) 制作
