--- a/_posts/2018-6-16-maxflow.md
+++ b/_posts/2018-6-16-maxflow.md
@@ -146,3 +146,7 @@ ford_fulkerson(G,s,t){
 ![](/img/in-post/maxflow/1.gif)
 
 对于该算法，效率取决于如何寻找增广路径。如果实现流网络的数据结构合理，利用 DFS 或 BFS 找到一条路径的时间为 $$ O(E) $$ 。对于 while 循环来说，至多循环$$\vert f \vert$$ 次，这种情况下每次循环减少一个单位，如果容量为有理数可以乘以一个系数使其均为整数。因此，总运行时间为 $$O(E \vert f \vert )$$ 。
+
+> 图自算法导论
+>
+> Gif 根据[visugo.net](https://visualgo.net/) 制作
