--- a/_posts/2018-6-15-sssp.md
+++ b/_posts/2018-6-15-sssp.md
@@ -53,9 +53,9 @@ initialize(V s){
 
 ``` 
 relax(V u, V v){
-    if(u.d > v.d + w(u, v)){
-        u.d = v.d + w(u, v)
-        u.prev = v
+    if(v.d > u.d + w(u, v)){
+        v.d = u.d + w(u, v)
+        v.prev = u
     }
 }
 ```
