--- a/_posts/2017-5-15-Heap.md
+++ b/_posts/2017-5-15-Heap.md
@@ -21,7 +21,7 @@ tags:
 
 ## 最大（最小）堆
 
-最大（最小）堆的定义为：对于除了根以外任何节点都要满足该节点的值大（小）于其子节点的值。上图所示即为最大堆。
+最大（最小）堆的性质为：对于任何节点，该节点的值必须大（小）于其子节点的值。上图所示即为最大堆。
 
 本文中以最大堆为例。
 
