--- a/_posts/2017-11-14-mst.markdown
+++ b/_posts/2017-11-14-mst.markdown
@@ -81,4 +81,4 @@ void MST_Prim(Vertex V) {
 
 两个方法每次都是找最小的边加入到结果中。 Kruskal 算法每次挑选所有边中权重最小的，Prim 算法每次找与现有结点相连边中权重最小的。每次加入的时候 Kruskal 需要判断这条边是否需要，即两个结点是否已经在树中，而 Prim 算法则只需要找到权中最小的即可。
 
-两个方法效率基本相同，一般实现下时间复杂度均为 $$O(E lgV)$$，但 Prim 算法利用斐波那契堆还可进一步优化到 $$O(E + VlgV)$$。
+两个方法效率基本相同，一般实现下时间复杂度均为 $$O(E lgV)$$，但 Prim 算法利用斐波那契堆还可进一步优化到 $$O(E + VlgV)$$。相对来说， Kruskal 更适合邻接矩阵，Prim 更适合邻接链表。
