--- a/_posts/2018-7-22-tcp-2.md
+++ b/_posts/2018-7-22-tcp-2.md
@@ -12,11 +12,11 @@ tags:
 
 TCP 数据报封装于 IP 数据报中。
 
-![](/img/in-post/tcp/2-2.png)
+![](/img/in-post/TCP/2-2.png)
 
 一般情况下 TCP 头部占用 20 字节，但有选项的情况下可能有 60 字节，结构如下。
 
-![](/img/in-post/tcp/2-1.png)
+![](/img/in-post/TCP/2-1.png)
 
 - 源端口和目的端口（各 16 比特）：与 IP 协议头部中的源 IP 和目的 IP 构成四元组，唯一的标识了每个连接。
 - 序列号（32 比特）：TCP 协议中数据每一个字节都有其对应的编号，这个字段用于标识当前报文第一个字节的序列号。
